--- a/requirements.txt
+++ b/requirements.txt
@@ -30,3 +30,12 @@ python-docx>=1.0.0
 gdown>=5.0.0
 supabase>=2.0.0
 edge-tts>=6.1.0
+streamlit>=1.28.0
+google-generativeai>=0.8.0
+google-genai>=1.0.0
+Pillow>=10.0.0
+PyPDF2>=3.0.0
+python-docx>=1.0.0
+gdown>=5.0.0
+supabase>=2.0.0
+edge-tts>=6.1.0
